Numbers in square brackets ([]) are tracker items on SourceForge with patch
or info related to the entry. <http://sourceforge.net/projects/vpopmail/>

5.4.10 - unreleased

	Bill Shupp
	- vuserinfo: display spamassassin info.

	Anonymous
	- vpopmail.c: Add missing ifdef that preventing modification of
	  one-character username accounts.

	Niki Denev
	- maildirquota.c: Remove double free() and fix use of free'd
	  memory in docheckquota(). [1101316]
	- contrib/qmail-maildir++.patch: same fix as for maildirquota.c.

	Tom Collins
	- vlimits.c: print errors to stderr.
	- vmoduser.c: add clarity to usage/help for bit flags.

	Michael Bowe
	- configure.in: fix typo of where the configure script says it
	  is checking for qmail-inject when in fact it was checking for
	  qmail-newmrh 
	- Documentation updates to README.roamingusers. Mention the 
	  requirement of tcpserver for POP-before-SMTP. Also include
	  some documentation on IMAP-before-SMTP. [1110269]

5.4.9 - released 26-Dec-04

	Jeremy Kister
	- Makefile.am: fix install problem on Solaris.  Some .h files
	  weren't being installed correctly.

	Charles Boening
	- Fix logging in PostgreSQL.
	- Change ENABLE_{MY|PG}SQL_LOGGING to ENABLE_SQL_LOGGING.
	- Replace --enable-{my|pg}sql-logging with --enable-sql-logging
	  in configure options.

	Tom Collins
	- Tweaking of Charles Boening's changes.
	- vchkpw: Fix problem in md5.h causing segfault in SMTP AUTH on 
	  amd64. [964843, 958799]
	- vpopmail.h: Add new error and flag defines from 5.5 series.
	- vchkpw: log webmail connections as 'vchkpw-webmail'.
	- vpopmail.c: fix problem related to sending SIGHUP to qmail-send.
	  Original problem could cause "Signal 1 caught by ps" error.

5.4.8 - released 12-Nov-2004

	Rick Widmer
	- vadddomain: Check for existing domain before prompting for
	  password.
	- vdeldomain: Fix uninitialized variable warning.

	Tom Collins
	- Fix problems with valias code in vmysql.c and vpgsql.c.  Storing